# Impellor-V3

./: .gitignore  INSTALL.docx  Impeller.stl  README.md  config.json  update_impellor_files.sh  vcpkg.json
.github/workflows/: build.yml
cli_engine/: CMakeLists.txt  fit.cpp
fusion_addin/: ImpellerRE.py  main.py
